exports[`<SignUpView /> renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": undefined,
      "flex": 1,
      "justifyContent": "flex-start",
      "marginTop": 64,
    }
  }>
  <View
    style={
      Object {
        "backgroundColor": "#f0f1f4",
        "borderBottomWidth": 1,
        "borderColor": "#e4e7ec",
        "padding": 20,
      }
    }>
    <View>
      <View
        style={Object {}}>
        <View
          style={
            Object {
              "marginBottom": 10,
            }
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontSize": 17,
                "fontWeight": "500",
                "marginBottom": 7,
              }
            }>
            Name
          </Text>
          <TextInput
            accessibilityLabel="Name"
            autoCapitalize="none"
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={[Function]}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor={undefined}
            selectionState={undefined}
            style={
              Object {
                "borderColor": "#cccccc",
                "borderRadius": 4,
                "borderWidth": 1,
                "color": "#000000",
                "fontSize": 17,
                "height": 36,
                "marginBottom": 5,
                "padding": 7,
              }
            }
            underlineColorAndroid="transparent"
            value="" />
        </View>
        <View
          style={
            Object {
              "marginBottom": 10,
            }
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontSize": 17,
                "fontWeight": "500",
                "marginBottom": 7,
              }
            }>
            Email
          </Text>
          <TextInput
            accessibilityLabel="Email"
            autoCapitalize="none"
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={[Function]}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor={undefined}
            selectionState={undefined}
            style={
              Object {
                "borderColor": "#cccccc",
                "borderRadius": 4,
                "borderWidth": 1,
                "color": "#000000",
                "fontSize": 17,
                "height": 36,
                "marginBottom": 5,
                "padding": 7,
              }
            }
            underlineColorAndroid="transparent"
            value="" />
        </View>
        <View
          style={
            Object {
              "marginBottom": 10,
            }
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontSize": 17,
                "fontWeight": "500",
                "marginBottom": 7,
              }
            }>
            Password
          </Text>
          <TextInput
            accessibilityLabel="Password"
            autoCapitalize="none"
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={[Function]}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor={undefined}
            returnKeyType={undefined}
            secureTextEntry={true}
            selectTextOnFocus={undefined}
            selectionColor={undefined}
            selectionState={undefined}
            style={
              Object {
                "borderColor": "#cccccc",
                "borderRadius": 4,
                "borderWidth": 1,
                "color": "#000000",
                "fontSize": 17,
                "height": 36,
                "marginBottom": 5,
                "padding": 7,
              }
            }
            underlineColorAndroid="transparent"
            value="" />
        </View>
      </View>
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#35507D",
            "borderColor": "#35507D",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 36,
            "justifyContent": "center",
            "margin": 0,
            "marginBottom": 10,
            "opacity": 1,
            "padding": 5,
          }
        }
        testID={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontFamily": "HelveticaNeue-Medium",
                "fontSize": 17,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              null,
              Object {
                "alignSelf": "center",
                "color": "white",
                "fontSize": 16,
              },
              null,
            ]
          }>
          Sign Up
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<SignUpView /> shows sign up error 1`] = `
<View
  style={
    Object {
      "backgroundColor": undefined,
      "flex": 1,
      "justifyContent": "flex-start",
      "marginTop": 64,
    }
  }>
  <View
    style={
      Object {
        "backgroundColor": "#f0f1f4",
        "borderBottomWidth": 1,
        "borderColor": "#e4e7ec",
        "padding": 20,
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "#f2dede",
            "borderColor": "#ebccd1",
            "borderRadius": 4,
            "color": "#a94442",
            "marginBottom": 15,
            "padding": 15,
          }
        }>
        Error
      </Text>
    </View>
    <View>
      <View
        style={Object {}}>
        <View
          style={
            Object {
              "marginBottom": 10,
            }
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontSize": 17,
                "fontWeight": "500",
                "marginBottom": 7,
              }
            }>
            Name
          </Text>
          <TextInput
            accessibilityLabel="Name"
            autoCapitalize="none"
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={[Function]}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor={undefined}
            selectionState={undefined}
            style={
              Object {
                "borderColor": "#cccccc",
                "borderRadius": 4,
                "borderWidth": 1,
                "color": "#000000",
                "fontSize": 17,
                "height": 36,
                "marginBottom": 5,
                "padding": 7,
              }
            }
            underlineColorAndroid="transparent"
            value="" />
        </View>
        <View
          style={
            Object {
              "marginBottom": 10,
            }
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontSize": 17,
                "fontWeight": "500",
                "marginBottom": 7,
              }
            }>
            Email
          </Text>
          <TextInput
            accessibilityLabel="Email"
            autoCapitalize="none"
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={[Function]}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor={undefined}
            selectionState={undefined}
            style={
              Object {
                "borderColor": "#cccccc",
                "borderRadius": 4,
                "borderWidth": 1,
                "color": "#000000",
                "fontSize": 17,
                "height": 36,
                "marginBottom": 5,
                "padding": 7,
              }
            }
            underlineColorAndroid="transparent"
            value="" />
        </View>
        <View
          style={
            Object {
              "marginBottom": 10,
            }
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#000000",
                "fontSize": 17,
                "fontWeight": "500",
                "marginBottom": 7,
              }
            }>
            Password
          </Text>
          <TextInput
            accessibilityLabel="Password"
            autoCapitalize="none"
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={[Function]}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor={undefined}
            returnKeyType={undefined}
            secureTextEntry={true}
            selectTextOnFocus={undefined}
            selectionColor={undefined}
            selectionState={undefined}
            style={
              Object {
                "borderColor": "#cccccc",
                "borderRadius": 4,
                "borderWidth": 1,
                "color": "#000000",
                "fontSize": 17,
                "height": 36,
                "marginBottom": 5,
                "padding": 7,
              }
            }
            underlineColorAndroid="transparent"
            value="" />
        </View>
      </View>
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#35507D",
            "borderColor": "#35507D",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 36,
            "justifyContent": "center",
            "margin": 0,
            "marginBottom": 10,
            "opacity": 1,
            "padding": 5,
          }
        }
        testID={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontFamily": "HelveticaNeue-Medium",
                "fontSize": 17,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              null,
              Object {
                "alignSelf": "center",
                "color": "white",
                "fontSize": 16,
              },
              null,
            ]
          }>
          Sign Up
        </Text>
      </View>
    </View>
  </View>
</View>
`;
